--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ headerTitle = "display"
   author = "sayan"
   description = "sayon smth smth"
   avatar = "/me/yy.jpg"
-  headerTitle = "our blog"
+  headerTitle = "Our Blog"
   motto = "Instead of feeling the road is difficult, it is better to set off immediately."
   # maxTags = 5
   # categoriesLimitInHeader = 6 # deprecated
