--- a/config.toml
+++ b/config.toml
@@ -46,8 +46,9 @@ headerTitle = "display"
   # utterancesRepo = "g1eny0ung/g1eny0ung.github.io"
 
    valine = true
-   LEANCLOUD_APP_ID = "dwv9A6zfhVm2WTevyAPdGye6-MdYXbMMI"
-   LEANCLOUD_APP_KEY = "PKUMUozyPKcHGApXy1B6yIkY"
+   LEANCLOUD_APP_ID = "ozewtyzs3MiJnX5LY6KdBf9t-MdYXbMMI"
+   LEANCLOUD_APP_KEY = "Ingysl0K0NfSoI9zEtWNyUAN"
+   VALINE_LANGUAGE = "en"
 
 
   email = "sayansarkar8584@gmail.com"
